<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/custom2"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/title2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/custom1"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resultados"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResultados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/custom3"
        app:layout_constraintTop_toBottomOf="@id/title2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario_neto_anual"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/viewSalarioRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario_neto_mensual"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/viewSalMesRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retencion_del_irpf"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/viewIRPFRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posibles_deducciones"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/viewDeducRes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ppp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnReset"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvResultados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="40dp"
        app:cardBackgroundColor="@color/custom5"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="90"
            android:src="@drawable/baseline_settings_backup_restore_24" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>